--- a/db_test.csproj
+++ b/db_test.csproj
@@ -52,11 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RegisterDocumentView.cs">
+    <Compile Include="RegisterDocumentDetailView.cs" />
+    <Compile Include="RegisterDocumentMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RegisterDocumentView.Designer.cs">
-      <DependentUpon>RegisterDocumentView.cs</DependentUpon>
+    <Compile Include="RegisterDocumentMainForm.Designer.cs">
+      <DependentUpon>RegisterDocumentMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,8 +65,8 @@
     <Compile Include="RegisterDocumentDataService.cs" />
     <Compile Include="RegisterDocumentPresenter.cs" />
     <Compile Include="RegisterFile.cs" />
-    <EmbeddedResource Include="RegisterDocumentView.resx">
-      <DependentUpon>RegisterDocumentView.cs</DependentUpon>
+    <EmbeddedResource Include="RegisterDocumentMainForm.resx">
+      <DependentUpon>RegisterDocumentMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
