--- a/archive.csproj
+++ b/archive.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FB036356-78DD-4110-9382-9CA969B5B23B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>db_test</RootNamespace>
-    <AssemblyName>db_test</AssemblyName>
+    <RootNamespace>pmis</RootNamespace>
+    <AssemblyName>archive</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -57,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PmisJsonResponse.cs" />
-    <Compile Include="RegisterDocumentDetailView.cs" />
+    <Compile Include="register\RegisterDocumentDaoService.cs" />
+    <Compile Include="register\RegisterDocumentDetailView.cs" />
     <Compile Include="RegisterDocumentMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,10 +67,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterDocument.cs" />
-    <Compile Include="RegisterDocumentDataService.cs" />
-    <Compile Include="RegisterDocumentPresenter.cs" />
+    <Compile Include="register\RegisterDocument.cs" />
+    <Compile Include="register\RegisterDocumentDataService.cs" />
+    <Compile Include="register\RegisterDocumentPresenter.cs" />
     <Compile Include="RegisterFile.cs" />
+    <Compile Include="reviewinfo\ReviewInfo.cs" />
+    <Compile Include="reviewinfo\ReviewInfoDataService.cs" />
+    <Compile Include="reviewinfo\ReviewInfoPresenter.cs" />
+    <Compile Include="SQLiteDAOService.cs" />
     <EmbeddedResource Include="RegisterDocumentMainForm.resx">
       <DependentUpon>RegisterDocumentMainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,13 +88,20 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Content Include="db.register.load.sql">
+    <Resource Include="resources\sangah-logo.png" />
+    <Content Include="review.import.sqlite.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="db.register.import.sql">
+    <Content Include="review.load.sqlite.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="db.setup.sql">
+    <Content Include="register.load.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="register.import.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="setup.sqlite.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
@@ -109,10 +121,8 @@
   <ItemGroup>
     <None Include="lib\Newtonsoft.Json.dll" />
     <None Include="lib\System.Data.SQLite.dll" />
-    <Content Include="resources\btn_folder_en.gif" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
+    <Content Include="etc\options_queries.txt" />
+    <Resource Include="resources\btn_folder_en.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Data.SQLite.Core.1.0.103\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('packages\System.Data.SQLite.Core.1.0.103\build\net451\System.Data.SQLite.Core.targets')" />
