--- a/App.config
+++ b/App.config
@@ -24,6 +24,7 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
                         <string>Genaral(일반)</string>
                         <string>Architectural (건축)</string>
                         <string>Structural (구조)</string>
@@ -53,6 +54,7 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
                         <string>Draft(임시)</string>
                         <string>For Information(정보)</string>
                         <string>For Review(검토)</string>
@@ -70,6 +72,7 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
                         <string>#501동 </string>
                         <string>#501동 A-ZONE(구조)</string>
                         <string>#501동 B-ZONE(구조)</string>
