--- a/App.config
+++ b/App.config
@@ -1145,7 +1145,7 @@
                 <value>register</value>
             </setting>
             <setting name="sqlite_db_location" serializeAs="String">
-                <value>test.db</value>
+                <value>archive.db</value>
             </setting>
             <setting name="db_type" serializeAs="String">
                 <value>SQLite</value>
