--- a/App.config
+++ b/App.config
@@ -1150,6 +1150,9 @@
             <setting name="db_type" serializeAs="String">
                 <value>SQLite</value>
             </setting>
+            <setting name="language" serializeAs="String">
+                <value>Korean</value>
+            </setting>
         </pmis.Properties.Settings>
         <db_test.Properties.Settings>
             <setting name="pmis_api_url" serializeAs="String">
