--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -15,44 +15,28 @@
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;string /&gt;
-  &lt;string&gt;Genaral(일반)&lt;/string&gt;
-  &lt;string&gt;Architectural (건축)&lt;/string&gt;
-  &lt;string&gt;Structural (구조)&lt;/string&gt;
-  &lt;string&gt;Civil (토목)&lt;/string&gt;
-  &lt;string&gt;Landscaping (조경)&lt;/string&gt;
-  &lt;string&gt;Mechanical (기계)&lt;/string&gt;
-  &lt;string&gt;Electrical (전기)&lt;/string&gt;
-  &lt;string&gt;Communication (통신)&lt;/string&gt;
-  &lt;string&gt;Firefighting (소방)&lt;/string&gt;
-  &lt;string&gt;Other (기타)&lt;/string&gt;
-  &lt;string&gt;Architecture&lt;/string&gt;
-  &lt;string&gt;Civil&lt;/string&gt;
-  &lt;string&gt;Electrical&lt;/string&gt;
-  &lt;string&gt;FireFighting&lt;/string&gt;
-  &lt;string&gt;HSE&lt;/string&gt;
-  &lt;string&gt;Instrument&lt;/string&gt;
-  &lt;string&gt;Mechanical&lt;/string&gt;
-  &lt;string&gt;Piping&lt;/string&gt;
-  &lt;string&gt;Quality&lt;/string&gt;
-  &lt;string&gt;Process&lt;/string&gt;
-  &lt;string&gt;Structure&lt;/string&gt;
-  &lt;string&gt;Common&lt;/string&gt;
+  &lt;string&gt;관리&lt;/string&gt;
+  &lt;string&gt;건축&lt;/string&gt;
+  &lt;string&gt;토목&lt;/string&gt;
+  &lt;string&gt;상업&lt;/string&gt;
+  &lt;string&gt;비용&lt;/string&gt;
+  &lt;string&gt;전기&lt;/string&gt;
+  &lt;string&gt;조경&lt;/string&gt;
+  &lt;string&gt;기계&lt;/string&gt;
+  &lt;string&gt;통신&lt;/string&gt;
+  &lt;string&gt;소방&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="register_status" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;string /&gt;
-  &lt;string&gt;Draft(임시)&lt;/string&gt;
-  &lt;string&gt;For Information(정보)&lt;/string&gt;
-  &lt;string&gt;For Review(검토)&lt;/string&gt;
-  &lt;string&gt;For Approval(승인)&lt;/string&gt;
-  &lt;string&gt;Final(최종)&lt;/string&gt;
-  &lt;string&gt;As-Built(준공)&lt;/string&gt;
-  &lt;string&gt;No Longer In Use(폐기)&lt;/string&gt;
-  &lt;string&gt;승인용&lt;/string&gt;
-  &lt;string&gt;공사용&lt;/string&gt;
-  &lt;string&gt;참고용&lt;/string&gt;
+  &lt;string&gt;폐기&lt;/string&gt;
+  &lt;string&gt;완료&lt;/string&gt;
+  &lt;string&gt;임시&lt;/string&gt;
+  &lt;string&gt;승인&lt;/string&gt;
+  &lt;string&gt;정보&lt;/string&gt;
+  &lt;string&gt;검토&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="register_type" Type="System.Collections.Specialized.StringCollection" Scope="User">
@@ -114,182 +98,88 @@
   &lt;string&gt;#505동 필로티(마감)&lt;/string&gt;
   &lt;string&gt;1-1호선&lt;/string&gt;
   &lt;string&gt;1-2호선&lt;/string&gt;
-  &lt;string&gt;1. MAIN PAGE&lt;/string&gt;
-  &lt;string&gt;1. 계약관리&lt;/string&gt;
-  &lt;string&gt;1. 공정현황&lt;/string&gt;
-  &lt;string&gt;1. 공지사항&lt;/string&gt;
-  &lt;string&gt;1. 문서일반&lt;/string&gt;
-  &lt;string&gt;1. 사업현황&lt;/string&gt;
-  &lt;string&gt;1. 시공업무보고&lt;/string&gt;
-  &lt;string&gt;1. 시스템 개요&lt;/string&gt;
-  &lt;string&gt;1. 품질관리&lt;/string&gt;
-  &lt;string&gt;2. 공통기능&lt;/string&gt;
-  &lt;string&gt;2. 문서관리&lt;/string&gt;
-  &lt;string&gt;2. 분류체계&lt;/string&gt;
-  &lt;string&gt;2. 사업일정&lt;/string&gt;
-  &lt;string&gt;2. 시스템 구성&lt;/string&gt;
-  &lt;string&gt;2. 안전관리&lt;/string&gt;
-  &lt;string&gt;2. 조직현황&lt;/string&gt;
-  &lt;string&gt;2. 하도급관리&lt;/string&gt;
   &lt;string&gt;2호선&lt;/string&gt;
-  &lt;string&gt;3-Months Shedule&lt;/string&gt;
-  &lt;string&gt;3-Weeks Schedule&lt;/string&gt;
-  &lt;string&gt;3. 공정계획관리&lt;/string&gt;
-  &lt;string&gt;3. 비상연락망&lt;/string&gt;
-  &lt;string&gt;3. 사업현안&lt;/string&gt;
-  &lt;string&gt;3. 시스템 시작하기&lt;/string&gt;
-  &lt;string&gt;3. 원가(내역)관리&lt;/string&gt;
-  &lt;string&gt;3. 제출물관리&lt;/string&gt;
-  &lt;string&gt;3. 환경관리&lt;/string&gt;
   &lt;string&gt;3호선&lt;/string&gt;
-  &lt;string&gt;4. 공정진도관리&lt;/string&gt;
-  &lt;string&gt;4. 기성관리&lt;/string&gt;
-  &lt;string&gt;4. 설계자료&lt;/string&gt;
-  &lt;string&gt;4. 시공공정사진&lt;/string&gt;
-  &lt;string&gt;4. 웹하드&lt;/string&gt;
   &lt;string&gt;4호선&lt;/string&gt;
-  &lt;string&gt;5. CMIS 질의/응답&lt;/string&gt;
-  &lt;string&gt;5. 공정승인관리&lt;/string&gt;
-  &lt;string&gt;5. 월간시공보고&lt;/string&gt;
   &lt;string&gt;501동외부&lt;/string&gt;
   &lt;string&gt;502동외부&lt;/string&gt;
   &lt;string&gt;503동외부&lt;/string&gt;
   &lt;string&gt;504동외부&lt;/string&gt;
   &lt;string&gt;505동외부&lt;/string&gt;
-  &lt;string&gt;6. 주간시공보고&lt;/string&gt;
   &lt;string&gt;ABS수지원형환기구 설치공사&lt;/string&gt;
   &lt;string&gt;Agreement contents management document&lt;/string&gt;
-  &lt;string&gt;Architectural&lt;/string&gt;
-  &lt;string&gt;Architectural(건축)&lt;/string&gt;
-  &lt;string&gt;Architecture&lt;/string&gt;
-  &lt;string&gt;Architecture (건축)&lt;/string&gt;
-  &lt;string&gt;Auxiliary equipment&lt;/string&gt;
   &lt;string&gt;Basic design drawing/doc.&lt;/string&gt;
-  &lt;string&gt;Boiler&lt;/string&gt;
   &lt;string&gt;CATV설비공사&lt;/string&gt;
-  &lt;string&gt;Change of design(설계변경도면/도서)&lt;/string&gt;
-  &lt;string&gt;Civil&lt;/string&gt;
-  &lt;string&gt;Civil &amp;amp; Archi&lt;/string&gt;
-  &lt;string&gt;Civil (토목)&lt;/string&gt;
-  &lt;string&gt;Civil(토목)&lt;/string&gt;
-  &lt;string&gt;Common (공통)&lt;/string&gt;
-  &lt;string&gt;Community(커뮤니티)&lt;/string&gt;
-  &lt;string&gt;Completion drawing(준공도면)&lt;/string&gt;
-  &lt;string&gt;Construction Change Direction&lt;/string&gt;
-  &lt;string&gt;Construction Management(시공관리)&lt;/string&gt;
+  &lt;string&gt;Calculation&lt;/string&gt;
+  &lt;string&gt;Change of design&lt;/string&gt;
+  &lt;string&gt;Commissioning Management&lt;/string&gt;
+  &lt;string&gt;Completion drawing&lt;/string&gt;
+  &lt;string&gt;Construction Management&lt;/string&gt;
+  &lt;string&gt;Construction daily report&lt;/string&gt;
   &lt;string&gt;Construction details progress chart&lt;/string&gt;
-  &lt;string&gt;Construction work report&lt;/string&gt;
-  &lt;string&gt;Contract Management&lt;/string&gt;
+  &lt;string&gt;Construction monthly report&lt;/string&gt;
+  &lt;string&gt;Construction weekly report&lt;/string&gt;
+  &lt;string&gt;Contract Databank&lt;/string&gt;
   &lt;string&gt;Contract design drawing/doc.&lt;/string&gt;
-  &lt;string&gt;Contract document&lt;/string&gt;
-  &lt;string&gt;Contractor (시공사)&lt;/string&gt;
-  &lt;string&gt;Control&lt;/string&gt;
   &lt;string&gt;Correction Action Request (CAR)&lt;/string&gt;
+  &lt;string&gt;Cost/Contract Management&lt;/string&gt;
   &lt;string&gt;Daily Health and Safety Training Report&lt;/string&gt;
-  &lt;string&gt;Daily construction work report&lt;/string&gt;
   &lt;string&gt;Daily environment inspection report&lt;/string&gt;
   &lt;string&gt;Daily environmental education report&lt;/string&gt;
   &lt;string&gt;Daily safety Inspection report&lt;/string&gt;
-  &lt;string&gt;Daily work report&lt;/string&gt;
-  &lt;string&gt;Data Management&lt;/string&gt;
-  &lt;string&gt;Deficiency Notice / Remedial Report&lt;/string&gt;
-  &lt;string&gt;Design Management&lt;/string&gt;
-  &lt;string&gt;Design VE&lt;/string&gt;
-  &lt;string&gt;Design VE/Data&lt;/string&gt;
-  &lt;string&gt;Design VE/Report&lt;/string&gt;
   &lt;string&gt;Design change document&lt;/string&gt;
   &lt;string&gt;Design change notice (DCN)&lt;/string&gt;
-  &lt;string&gt;Design drawing/doc.&lt;/string&gt;
-  &lt;string&gt;Design meeting(설계회의)&lt;/string&gt;
-  &lt;string&gt;Document Management&lt;/string&gt;
-  &lt;string&gt;Documents &amp;amp; Drawings&lt;/string&gt;
-  &lt;string&gt;E-Book Management(전자도서관리)&lt;/string&gt;
+  &lt;string&gt;Document &amp;amp; Drawing&lt;/string&gt;
+  &lt;string&gt;Drawing&lt;/string&gt;
+  &lt;string&gt;E-Book Management&lt;/string&gt;
   &lt;string&gt;E.J마감공사&lt;/string&gt;
-  &lt;string&gt;Electrical/Communication&lt;/string&gt;
-  &lt;string&gt;Electrical/Communication(전기/통신)&lt;/string&gt;
-  &lt;string&gt;Electricity&lt;/string&gt;
-  &lt;string&gt;Electricity (전기)&lt;/string&gt;
-  &lt;string&gt;Electricity Power&lt;/string&gt;
-  &lt;string&gt;Enforcement design 100%(실시설계(100%)도면/도서)&lt;/string&gt;
-  &lt;string&gt;Enforcement design 50%(실시설계(50%)도면/도서)&lt;/string&gt;
+  &lt;string&gt;Earning Databank&lt;/string&gt;
+  &lt;string&gt;Enforcement design 100%&lt;/string&gt;
+  &lt;string&gt;Enforcement design 50%&lt;/string&gt;
+  &lt;string&gt;Engineering Management&lt;/string&gt;
+  &lt;string&gt;Environmental Databank&lt;/string&gt;
   &lt;string&gt;Environmental Management&lt;/string&gt;
   &lt;string&gt;Environmental Management Plan&lt;/string&gt;
   &lt;string&gt;Environmental visibility requirements&lt;/string&gt;
-  &lt;string&gt;Equipment manufacturers (자재/장비 제조업체)&lt;/string&gt;
-  &lt;string&gt;Etc.&lt;/string&gt;
   &lt;string&gt;Etcetera&lt;/string&gt;
   &lt;string&gt;Event Photos&lt;/string&gt;
-  &lt;string&gt;Factory demolition work&lt;/string&gt;
-  &lt;string&gt;Fence installing construction&lt;/string&gt;
-  &lt;string&gt;Field Instruction&lt;/string&gt;
   &lt;string&gt;Field change notification (FCN)&lt;/string&gt;
   &lt;string&gt;Field change request (FCR)&lt;/string&gt;
-  &lt;string&gt;Fire&lt;/string&gt;
-  &lt;string&gt;Fire &lt;/string&gt;
-  &lt;string&gt;Firefighting&lt;/string&gt;
-  &lt;string&gt;Firefighting(소방)&lt;/string&gt;
   &lt;string&gt;Functional Breakdown Structure&lt;/string&gt;
   &lt;string&gt;HOOK설치공사&lt;/string&gt;
   &lt;string&gt;History of usge of environment preservation cost &lt;/string&gt;
-  &lt;string&gt;I. 시스템 개요&lt;/string&gt;
-  &lt;string&gt;II.시스템공통&lt;/string&gt;
-  &lt;string&gt;III.사업일반&lt;/string&gt;
-  &lt;string&gt;IV.계약/기성&lt;/string&gt;
-  &lt;string&gt;IX. 문서/자료&lt;/string&gt;
-  &lt;string&gt;Imported Materials Inspection&lt;/string&gt;
-  &lt;string&gt;Information and Communication&lt;/string&gt;
   &lt;string&gt;Initiation inspection bowel management&lt;/string&gt;
-  &lt;string&gt;Inspection&lt;/string&gt;
-  &lt;string&gt;Inspection Level 2&lt;/string&gt;
-  &lt;string&gt;Inspection Level 3&lt;/string&gt;
   &lt;string&gt;Inspection procedures / plans&lt;/string&gt;
   &lt;string&gt;LPG 저장시설공사&lt;/string&gt;
-  &lt;string&gt;Landscaping&lt;/string&gt;
-  &lt;string&gt;Landscaping(조경)&lt;/string&gt;
   &lt;string&gt;Letter&lt;/string&gt;
   &lt;string&gt;MDF실 마감공사&lt;/string&gt;
-  &lt;string&gt;Machine&lt;/string&gt;
-  &lt;string&gt;Machine (기계)&lt;/string&gt;
-  &lt;string&gt;Machine(기계)&lt;/string&gt;
-  &lt;string&gt;Master Plan(사업계획)&lt;/string&gt;
-  &lt;string&gt;Material Approved Request&lt;/string&gt;
-  &lt;string&gt;Materials for meeting&lt;/string&gt;
-  &lt;string&gt;Measurement&lt;/string&gt;
+  &lt;string&gt;Mail&lt;/string&gt;
+  &lt;string&gt;Master Plan&lt;/string&gt;
   &lt;string&gt;Measures for delay&lt;/string&gt;
   &lt;string&gt;Meeting Minutes&lt;/string&gt;
-  &lt;string&gt;Minutes(회의록)&lt;/string&gt;
   &lt;string&gt;Monthly foreground photo&lt;/string&gt;
-  &lt;string&gt;Monthly work report&lt;/string&gt;
-  &lt;string&gt;Non Conformance Report &lt;/string&gt;
   &lt;string&gt;Nonconformity reports (NCR)&lt;/string&gt;
-  &lt;string&gt;Office Remodeling&lt;/string&gt;
   &lt;string&gt;Official Documents&lt;/string&gt;
-  &lt;string&gt;On-site inspection (ITP)&lt;/string&gt;
-  &lt;string&gt;Organization&lt;/string&gt;
-  &lt;string&gt;Other&lt;/string&gt;
-  &lt;string&gt;Other Management(기타관리)&lt;/string&gt;
-  &lt;string&gt;Other construction&lt;/string&gt;
-  &lt;string&gt;Other work report&lt;/string&gt;
-  &lt;string&gt;Other(기타)&lt;/string&gt;
+  &lt;string&gt;On-site inspection&lt;/string&gt;
+  &lt;string&gt;PMIS Data Management&lt;/string&gt;
   &lt;string&gt;PMIS 구축방안 Setting&lt;/string&gt;
   &lt;string&gt;PMIS구축비&lt;/string&gt;
-  &lt;string&gt;Permission&lt;/string&gt;
   &lt;string&gt;Pre-construction work report&lt;/string&gt;
-  &lt;string&gt;Process Management(공정관리)&lt;/string&gt;
   &lt;string&gt;Process photo&lt;/string&gt;
+  &lt;string&gt;Procurement Management&lt;/string&gt;
   &lt;string&gt;Production process photo&lt;/string&gt;
   &lt;string&gt;Project Management&lt;/string&gt;
   &lt;string&gt;Project Status&lt;/string&gt;
-  &lt;string&gt;Project Status(사업일반)&lt;/string&gt;
-  &lt;string&gt;Promotional materials (홍보자료)&lt;/string&gt;
-  &lt;string&gt;Quality Diagnostic (품질진단)&lt;/string&gt;
+  &lt;string&gt;Promotional materials&lt;/string&gt;
+  &lt;string&gt;Purchase Order&lt;/string&gt;
+  &lt;string&gt;Quality Databank&lt;/string&gt;
+  &lt;string&gt;Quality Diagnostic&lt;/string&gt;
   &lt;string&gt;Quality Improvement Program(QIP)&lt;/string&gt;
   &lt;string&gt;Quality Management&lt;/string&gt;
   &lt;string&gt;Quality Management Plan&lt;/string&gt;
-  &lt;string&gt;Quality Manual (품질 메뉴얼)&lt;/string&gt;
-  &lt;string&gt;Quality procedures (품질절차서)&lt;/string&gt;
-  &lt;string&gt;Quality reference room (품질 자료실)&lt;/string&gt;
-  &lt;string&gt;Quality/Safety/Environment(품질/안전/환경)&lt;/string&gt;
+  &lt;string&gt;Quality Manual&lt;/string&gt;
+  &lt;string&gt;Quality procedures&lt;/string&gt;
+  &lt;string&gt;Quality/Safety/Environment&lt;/string&gt;
   &lt;string&gt;RM13~RM18&lt;/string&gt;
   &lt;string&gt;RM19~RM22&lt;/string&gt;
   &lt;string&gt;RM1~RM6&lt;/string&gt;
@@ -307,11 +197,7 @@
   &lt;string&gt;RM7~RM12&lt;/string&gt;
   &lt;string&gt;RM83~RM86&lt;/string&gt;
   &lt;string&gt;RM87~RM88&lt;/string&gt;
-  &lt;string&gt;Report Management(보고관리)&lt;/string&gt;
-  &lt;string&gt;Report material(보고자료)&lt;/string&gt;
-  &lt;string&gt;Request For Design Change&lt;/string&gt;
-  &lt;string&gt;Request For Information&lt;/string&gt;
-  &lt;string&gt;Request For Inspection&lt;/string&gt;
+  &lt;string&gt;Reports&lt;/string&gt;
   &lt;string&gt;Request for Information&lt;/string&gt;
   &lt;string&gt;SM16~SM22&lt;/string&gt;
   &lt;string&gt;SM1~SM8&lt;/string&gt;
@@ -325,51 +211,31 @@
   &lt;string&gt;SM66~SM69&lt;/string&gt;
   &lt;string&gt;SM70~SM76&lt;/string&gt;
   &lt;string&gt;SM9~SM15&lt;/string&gt;
-  &lt;string&gt;Safety Corrective Action Request &lt;/string&gt;
+  &lt;string&gt;Safety Databank&lt;/string&gt;
   &lt;string&gt;Safety Management&lt;/string&gt;
   &lt;string&gt;Safety Management Plan&lt;/string&gt;
-  &lt;string&gt;Safety Resources&lt;/string&gt;
   &lt;string&gt;Safety intellectual&lt;/string&gt;
   &lt;string&gt;Safety management usage&lt;/string&gt;
-  &lt;string&gt;Site Memo&lt;/string&gt;
+  &lt;string&gt;Specification&lt;/string&gt;
   &lt;string&gt;Start construction drawing/doc.&lt;/string&gt;
+  &lt;string&gt;Start-up procedures&lt;/string&gt;
   &lt;string&gt;Status of defects per company&lt;/string&gt;
   &lt;string&gt;Status of the event of a disaster&lt;/string&gt;
-  &lt;string&gt;Structural&lt;/string&gt;
-  &lt;string&gt;Structural(구조)&lt;/string&gt;
-  &lt;string&gt;Subcontract   Databank&lt;/string&gt;
-  &lt;string&gt;Subcontract Approval Request&lt;/string&gt;
-  &lt;string&gt;Submittal&lt;/string&gt;
-  &lt;string&gt;Supervision vacation.&lt;/string&gt;
+  &lt;string&gt;Subcontract Management&lt;/string&gt;
+  &lt;string&gt;Subcontractor daily report&lt;/string&gt;
+  &lt;string&gt;Supervision monthly report&lt;/string&gt;
+  &lt;string&gt;Supervision weekly report&lt;/string&gt;
   &lt;string&gt;Supervision work report&lt;/string&gt;
-  &lt;string&gt;Supervision work report (Fire)&lt;/string&gt;
-  &lt;string&gt;Supervision work report (Mechanical)&lt;/string&gt;
-  &lt;string&gt;Supervision work report(Civil &amp;amp; archi)&lt;/string&gt;
-  &lt;string&gt;Supervision work report(Electricity)&lt;/string&gt;
-  &lt;string&gt;Supervision work report(Information and Communicat&lt;/string&gt;
-  &lt;string&gt;Supervision work report(N1)&lt;/string&gt;
-  &lt;string&gt;Supervision work report(N2)&lt;/string&gt;
-  &lt;string&gt;Supervision work report(electric)&lt;/string&gt;
-  &lt;string&gt;Supervisor Official writing&lt;/string&gt;
   &lt;string&gt;Supplier default disposal requests (SDDR)&lt;/string&gt;
-  &lt;string&gt;System Manual&lt;/string&gt;
   &lt;string&gt;T.A.B&lt;/string&gt;
   &lt;string&gt;T.A.B 및 시운전&lt;/string&gt;
-  &lt;string&gt;Technical Review Comments&lt;/string&gt;
+  &lt;string&gt;Test ADd&lt;/string&gt;
   &lt;string&gt;The-spot inspection report&lt;/string&gt;
   &lt;string&gt;Transmittal&lt;/string&gt;
-  &lt;string&gt;Transmittal For Approval&lt;/string&gt;
-  &lt;string&gt;Turbine&lt;/string&gt;
   &lt;string&gt;UPS설치공사&lt;/string&gt;
-  &lt;string&gt;V.공정관리&lt;/string&gt;
-  &lt;string&gt;VI.시공관리&lt;/string&gt;
-  &lt;string&gt;VII.보고관리&lt;/string&gt;
-  &lt;string&gt;VIII.커뮤니티&lt;/string&gt;
+  &lt;string&gt;VE Databank&lt;/string&gt;
+  &lt;string&gt;VE Report&lt;/string&gt;
   &lt;string&gt;Waste Management document&lt;/string&gt;
-  &lt;string&gt;Work order (Owner)&lt;/string&gt;
-  &lt;string&gt;Work order (Supervisor)&lt;/string&gt;
-  &lt;string&gt;Workflow Transmittal&lt;/string&gt;
-  &lt;string&gt;Writing Official document (Shinhan)&lt;/string&gt;
   &lt;string&gt;ㅈ&lt;/string&gt;
   &lt;string&gt;가구공사&lt;/string&gt;
   &lt;string&gt;가구류 반입&lt;/string&gt;
@@ -400,9 +266,6 @@
   &lt;string&gt;건물지하접지공사&lt;/string&gt;
   &lt;string&gt;건설&lt;/string&gt;
   &lt;string&gt;건설공사표지공사&lt;/string&gt;
-  &lt;string&gt;건설사업관리 기록부&lt;/string&gt;
-  &lt;string&gt;건설사업관리 지시부&lt;/string&gt;
-  &lt;string&gt;건설사업관리 지시부 조치&lt;/string&gt;
   &lt;string&gt;건설정보시스템공사&lt;/string&gt;
   &lt;string&gt;건식 AD 및 PD설치공사&lt;/string&gt;
   &lt;string&gt;건축공사&lt;/string&gt;
@@ -459,7 +322,6 @@
   &lt;string&gt;교통안전시설공사-100%완료&lt;/string&gt;
   &lt;string&gt;교통안전시설공사-중기60%완료&lt;/string&gt;
   &lt;string&gt;교통안전시설공사-초기30%완료&lt;/string&gt;
-  &lt;string&gt;구매관리&lt;/string&gt;
   &lt;string&gt;구조물 되메우기공사(지하1층)-100%완료&lt;/string&gt;
   &lt;string&gt;구조물 되메우기공사(지하1층)-중기50%완료&lt;/string&gt;
   &lt;string&gt;구조물 되메우기공사(지하1층)-중후기80%완&lt;/string&gt;
@@ -525,10 +387,7 @@
   &lt;string&gt;기구취부공사&lt;/string&gt;
   &lt;string&gt;기성 및 준공 검사원&lt;/string&gt;
   &lt;string&gt;기성 청구 형식 Setting&lt;/string&gt;
-  &lt;string&gt;기술검토의견서&lt;/string&gt;
-  &lt;string&gt;기자재제작사진&lt;/string&gt;
   &lt;string&gt;기초&lt;/string&gt;
-  &lt;string&gt;기초과학연구원 양식&lt;/string&gt;
   &lt;string&gt;기타&lt;/string&gt;
   &lt;string&gt;기타 가설공사&lt;/string&gt;
   &lt;string&gt;기타 잡공사&lt;/string&gt;
@@ -675,7 +534,6 @@
   &lt;string&gt;부속건물구조체공사&lt;/string&gt;
   &lt;string&gt;부속실 타일공사&lt;/string&gt;
   &lt;string&gt;부스덕트공사&lt;/string&gt;
-  &lt;string&gt;분야별 업무일자&lt;/string&gt;
   &lt;string&gt;블럭공사&lt;/string&gt;
   &lt;string&gt;비닐장판깔기공사&lt;/string&gt;
   &lt;string&gt;비산분진 발생신고&lt;/string&gt;
@@ -1037,7 +895,6 @@
   &lt;string&gt;탄성퍼티공사&lt;/string&gt;
   &lt;string&gt;태양광 발전 설치공사&lt;/string&gt;
   &lt;string&gt;테라조공사&lt;/string&gt;
-  &lt;string&gt;테스트&lt;/string&gt;
   &lt;string&gt;토공사&lt;/string&gt;
   &lt;string&gt;토공사(성토)-중기50%완료&lt;/string&gt;
   &lt;string&gt;토공사(성토)-초기30%완료&lt;/string&gt;
@@ -1133,10 +990,10 @@
       <Value Profile="(Default)">archive.db</Value>
     </Setting>
     <Setting Name="db_type" Type="System.String" Scope="User">
-      <Value Profile="(Default)">SQLite</Value>
+      <Value Profile="(Default)">sqlite</Value>
     </Setting>
     <Setting Name="language" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Korean</Value>
+      <Value Profile="(Default)">ko_KR</Value>
     </Setting>
   </Settings>
 </SettingsFile>
