--- a/archive.csproj
+++ b/archive.csproj
@@ -158,6 +158,7 @@
       <DependentUpon>ko_KR.resx</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="i18n\LanguageSupport.cs" />
     <Compile Include="IDbConnection.cs" />
     <Compile Include="LanguageService.cs" />
     <Compile Include="LogUtil.cs" />
